# Financial

./: CMakeLists.txt  README.md  main.c  myHead.h  system.h
case/: case.c  case.h
db/: db.c  db.h
financial/: financial.c  financial.h
menu/: menu.c  menu.h
run/: run.c  run.h
saveToFile/: saveToFile.c  saveToFile.h
user/: user.c  user.h
